[gd_scene load_steps=5 format=3 uid="uid://bk5w02kbc82od"]

[ext_resource type="Script" uid="uid://q4rnoiemodiw" path="res://scripts/gamemanager.gd" id="1_w7is2"]
[ext_resource type="PackedScene" uid="uid://u724ytsb31qe" path="res://scenes/login_screen.tscn" id="2_opddj"]
[ext_resource type="PackedScene" uid="uid://rtjbqje2bdoa" path="res://scenes/action_screen.tscn" id="3_7lrkp"]
[ext_resource type="PackedScene" uid="uid://dhj0tisdfdl26" path="res://scenes/leaderboard.tscn" id="4_rc1hy"]

[node name="Master" type="Node"]
script = ExtResource("1_w7is2")

[node name="LoginScreen" parent="." instance=ExtResource("2_opddj")]

[node name="ActionScreen" parent="." instance=ExtResource("3_7lrkp")]
visible = false

[node name="Leaderboard" parent="." instance=ExtResource("4_rc1hy")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 557.0
offset_top = 313.0
offset_right = 597.0
offset_bottom = 353.0
grow_horizontal = 1
grow_vertical = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="lbutton" from="LoginScreen" to="." method="_on_login_screen_lbutton"]
[connection signal="submitted" from="LoginScreen" to="." method="_on_login_screen_submitted"]
[connection signal="submitted" from="LoginScreen" to="ActionScreen" method="_on_login_screen_submitted"]
[connection signal="submitted" from="LoginScreen" to="Leaderboard" method="_on_login_screen_submitted"]
[connection signal="done_pressed" from="ActionScreen" to="." method="_on_action_screen_done_pressed"]
[connection signal="done_pressed" from="ActionScreen" to="LoginScreen" method="_on_action_screen_done_pressed"]
[connection signal="done_pressed" from="ActionScreen" to="Leaderboard" method="_on_action_screen_done_pressed"]
[connection signal="back_pressed" from="Leaderboard" to="." method="_on_leaderboard_back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
